Firefox overflow fixes (#31)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,6 +8,38 @@ textarea {
   resize: both !important;
 }
 
+div.line-clamp-4:-moz-read-only,
+div.line-clamp-3:-moz-read-only {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 6em; /* exactly three lines */
+  margin-bottom: 1rem;
+}
+
+div.line-clamp-4:-moz-read-only::after
+div.line-clamp-3:-moz-read-only::after {
+  content: "";
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 70%;
+  height: 1.2em;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
+}
+
+.fade {
+  display: block;
+  position: relative;
+  width: 100%;
+  margin: 0 0 1em 0;
+  overflow: hidden;
+  height: 3.6em; /* exactly three lines */
+}
+
+
 .bg-spots {
   background: url("/images/bg-6.svg") no-repeat center center ;
   background-size: cover;
